--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     var RnrtE_ZLM_GrGxSc={"it":4341544,"key":"76a40"};
 </script>
 <script src="https://d29gqhzevia104.cloudfront.net/3ca5b22.js"></script>
+<script>_VR();</script>
 
 <link href="https://fonts.googleapis.com" rel="preconnect" ><link href="https://fonts.gstatic.com" rel="preconnect" crossorigin ></head>
 <body id="io1t">
